# web

./: Makefile  README.md  config.py  db.py  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  run.sh  tests.py
.github/workflows/: docker-build.yml  lint.yml  pylint.yml
cmd/: main.go
config/: config.go
db/: UserRequest.go  configs.go  redis.go  utils.go
docker/: Dockerfile  Makefile  README.md  auto_unseal.py  buildinfo.mk  configure_uesers.sh  docker-compose.yml  vault.py
routes/: Token.go  mainRoutes.go  router.go  staticRoutes.go
src/: __init__.py  app.py  config.py  db.py  db_redis.py  routes.py
src/templates/: docs.html  home.html  info.html
src/templates/users/: admin.html  unlogged.html  user.html
templates/: docs.html  home.html  index.html  user.html
templates/users/: admin.html  unlogged.html  user.html
