[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Nicolò Vescera <nicolo.vescera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hvac = "^2.2.0"
flask = "^3.0.3"
authlib = "^1.3.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
