[tool.poetry]
name = "web"
version = "0.1.0"
description = ""
authors = ["Nicolò Vescera <nicolo.vescera@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hvac = "^2.2.0"
flask = "^3.0.3"
authlib = "^1.3.1"
python-dotenv = "^1.0.1"
redis = "^5.0.8"


[tool.poetry.group.docs.dependencies]
pyment = "^0.3.3"
pylint = "^3.2.5"


[tool.poetry.group.dev.dependencies]
click = "^8.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
